<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="Udacity">Udacity</string>
    <string name="Address">2465 Latham St, Mountain View, CA 94043</string>
    <string name="Number">650-555-5555</string>
    <string name="Site">www.udacity.com</string>
    <string name="Text1">The</string>
    <string name="Text2">Place</string>
    <string name="Text3">To</string>
    <string name="Text4">Study</string>

</resources>
